# Computer-AI-Agent

./: .gitignore  README.md  README_SERAPHINE_PIPELINE.md  agent.py  app_test.py  loop.py  main.py  pyproject.toml
ExtractionPipelineFDOM_JSON/chrome/: fdom.json  metadata.json
macManager/: README_Mac.md  mac_window_manager.py  mac_window_test.py
tests/: test_ocr_performance.py  test_yolo_memory.py  test_yolo_performance.py
utils/: bbox_merger.py  beautiful_visualizer.py  config.json  create_crops.py  crop_test.py  gemini_analyzer.py  gemini_integration.py  helpers.py  ocr_detector.py  parallel_processor.py  pipeline_exporter.py  seraphine_generator.py  seraphine_processor.py  temp_main.py  yolo_detector.py
windowManager/: window_functions.py  window_manager.py
